Raise init-system-helpers Priority to required
Taking over the files from sysv-rc and sysvinit-utils means
these now (Pre-)Depends on init-system-helpers and thus
init-system-helpers can't have a lower priority than them.

--- a/debian/control
+++ b/debian/control
@@ -13,6 +13,7 @@ Vcs-Browser: http://anonscm.debian.org/gitweb/?p=collab-maint/init-system-helper
 
 Package: init-system-helpers
 Architecture: all
+Priority: required
 Multi-Arch: foreign
 Depends: perl-base (>= 5.20.1-3), ${perl:Depends}, ${misc:Depends}
 Replaces: sysv-rc (<< 2.88dsf-59.3~), sysvinit-utils (<< 2.88dsf-59.3)
