--- a/debian/control
+++ b/debian/control
@@ -28,6 +28,10 @@ Description: helper tools for all init systems
  systemd). An example is deb-systemd-helper, a script that enables systemd unit
  files without depending on a running systemd.
  .
+ It also includes the "service", "invoke-rc.d", and "update-rc.d" scripts which
+ provide an abstraction for enabling, disabling, starting, and stopping
+ services for all supported Debian init systems as specified by the policy.
+ .
  While this package is maintained by pkg-systemd-maintainers, it is NOT
  specific to systemd at all. Maintainers of other init systems are welcome to
  include their helpers in this package.
