Make init depend on init-system-helpers
This ensures the availability of invoke-rc.d and update-rc.d if/once
sysvinit-utils becomes non-essential.

--- a/debian/control
+++ b/debian/control
@@ -57,7 +57,7 @@ Essential: yes
 Priority: required
 Multi-Arch: foreign
 Pre-Depends: systemd-sysv [linux-any] | sysvinit-core | upstart [linux-any]
-Depends: ${misc:Depends}
+Depends: ${misc:Depends}, init-system-helpers
 Description: System-V-like init utilities - metapackage
  This package is an essential metapackage which allows you to select from
  three available init systems in Debian (systemd, sysvinit, upstart) while
