Use the same Maintainer name as in src:systemd

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: init-system-helpers
 Section: admin
 Priority: extra
-Maintainer: pkg-systemd-maintainers <pkg-systemd-maintainers@lists.alioth.debian.org>
+Maintainer: Debian systemd Maintainers <pkg-systemd-maintainers@lists.alioth.debian.org>
 Uploaders: Michael Biebl <biebl@debian.org>,
            Martin Pitt <mpitt@debian.org>,
 Build-Depends: debhelper (>= 8.0.0),
