Fix typo in cursors Makefile
This patch fixes a typo of the watch cursor.

Signed-off-by: Johannes Pointner <johannes.pointner@gmail.com>
Signed-off-by: Ross Burton <ross.burton@intel.com>

--- a/cursors/Makefile.am
+++ b/cursors/Makefile.am
@@ -79,7 +79,7 @@ CURSOR_NAMES = \
 	ul_angle \
 	ur_angle \
 	v_double_arrow \
-	watcha \
+	watch \
 	xterm  
 
 CURSOR_DIR = $(datadir)/icons/xcursor-transparent/cursors
