--- a/configure.ac
+++ b/configure.ac
@@ -1,6 +1,6 @@
-AC_INIT(transp)
-AM_INIT_AUTOMAKE(xcursor-transparent-theme, 0.1.1)
-AM_CONFIG_HEADER(config.h)
+AC_INIT([xcursor-transparent-theme], [0.1.1])
+AC_CONFIG_SRCDIR([transp])
+AM_INIT_AUTOMAKE
 
 AC_PROG_INSTALL
 
