buildsys: signals.c depends on signames.h
By explicitly specifying the dependency between signals.c and
signames.h.

BUILT_SOURCES only works with the standard targets, so if somebody tries
to build fuser directly he may end up with a build failure. What's
worse, he could do "make -j2 src/signames.h src/fuser" and he could end
up with a broken build using a only partially generated signames.h.

And that "somebody" was me when packaging killall in psmisc 22.21...
so it actually happens.

References:
 psmisc/psmisc!16

--- a/Makefile.am
+++ b/Makefile.am
@@ -89,6 +89,8 @@ src/signames.h: src/signames.c Makefile
 		grep '^{ 1,"HUP" },$$' $@ >/dev/null || \
 		  { rm -f $@; exit 1; }
 
+src/signals.c: src/signames.h
+
 install-exec-hook:
 		cd $(DESTDIR)$(bindir) && \
 			( [ -h pstree.x11 ]  || $(LN_S) pstree pstree.x11)
